src/test/ui/unboxed-closures/unboxed-closures-fnmut-as-fn.stderr
error[E0277]: expected a `Fn<(isize,)>` closure, found `S`
  --> $DIR/unboxed-closures-fnmut-as-fn.rs:28:21
   |
LL | fn call_it<F:Fn(isize)->isize>(f: &F, x: isize) -> isize {
   |              ---------------- required by this bound in `call_it`
...
LL |     let x = call_it(&S, 22);
   |                     ^^ expected an `Fn<(isize,)>` closure, found `S`
   |
   = help: the trait `Fn<(isize,)>` is not implemented for `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
